--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,12 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@components": ["components/index.ts"],
+      "@ui": ["components/ui/index.ts"],
+      "@helper": ["components/helper/index.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
+
