--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,21 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended",
+    "next/core-web-vitals"
+  ],
+  "plugins": ["react"],
+  "parserOptions": {    
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-multiple-empty-lines": [2, { "max": 1 }],
+    "no-unused-vars": "warn"
+  }
 }
