--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "classnames": "^2.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "next": "13.1.6",
+    "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-svg": "^16.1.0",
+    "sass": "^1.58.0",
     "typescript": "4.9.5"
   }
 }
