Added basic components + start on the store components logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "paths": {
       "@components": ["components/index.ts"],
       "@ui": ["components/ui/index.ts"],
-      "@helper": ["components/helper/index.ts"]
+      "@helper": ["components/helper/index.ts"],
+      "@utils": ["utils/index.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
