--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-svg": "^16.1.0",
+    "react-toastify": "^9.1.1",
     "sass": "^1.58.0",
     "tweetnacl": "^1.0.3",
     "typescript": "4.9.5"
