--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "^2.8.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-svg": "^16.1.0",
     "react-toastify": "^9.1.1",
     "sass": "^1.58.0",
