--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-toastify": "^9.1.1",
     "sass": "^1.58.0",
     "tweetnacl": "^1.0.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   }
 }
