--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "apexcharts": "^3.37.1",
     "bignumber.js": "^9.1.1",
     "bs58": "^5.0.0",
     "classnames": "^2.3.2",
@@ -30,6 +31,7 @@
     "next-auth": "^4.19.2",
     "prettier": "^2.8.3",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
     "react-svg": "^16.1.0",
