--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-modal": "^3.16.1",
     "react-svg": "^16.1.0",
     "react-toastify": "^9.1.1",
+    "react-toggle": "^4.1.3",
     "sass": "^1.58.0",
     "tweetnacl": "^1.0.3",
     "typescript": "4.9.5",
