--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "tweetnacl": "^1.0.3",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
